# cardify

./: .gitignore  pyproject.toml
docs/: design.md
src/cardify/: __init__.py  ankidb.py  chunking.py  cli.py  database.py  logging_config.py  pdf_anki.db  pdf_insert.py
