[project]
name = "cardify"
version = "0.1.0"
description = "Turn books into anki cards"
readme = "README.md"
authors = [
    { name = "Jan Reimer", email = "bytemouse@posteo.org" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-text-splitters>=0.3.6",
    "marker-pdf>=1.3.5",
    "polars>=1.22.0",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
cu124 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
rocm = [
    "torch>=2.6.0; sys_platform == 'linux'",
    "torchvision>=0.21.0; sys_platform == 'linux'",
    "pytorch-triton-rocm>=3.2.0; sys_platform == 'linux'",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
        { extra = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-rocm", extra = "rocm" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true

[project.scripts]
cardify = "cardify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]


[tool.ruff]

target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
